[FIX/#20] 캘린더 조회 오류 수정